# ai-knowledge-demo

./: .gitignore  README.md  ingest.py  pyproject.toml
data/: customer_service_manual.md  logistics_exception_rules.txt  membership_invoice_rules.docx  payment_and_membership_rules.md  refund_edge_cases.md  refund_policy.md
src/ai_knowledge_demo/: __init__.py  ask.py  cli.py  evaluate.py  ingest.py
tests/: __init__.py  eval_cases.json  test_ask.py  test_cli.py  test_evaluate.py  test_ingest.py
