[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-knowledge-demo"
version = "0.1.0"
description = "A small Python package scaffold for AI knowledge experiments."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "ai-knowledge-demo contributors" }
]
dependencies = [
  "chromadb>=1.5.9,<2",
]

[project.scripts]
ai-knowledge-demo = "ai_knowledge_demo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
