[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-knowledge-demo"
version = "0.1.0"
description = "A small Python package scaffold for AI knowledge experiments."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "ai-knowledge-demo contributors" }
]
dependencies = [
  "chromadb>=1.5.9,<2",
  "pypdf>=5,<6",
  "python-docx>=1.1,<2",
  "rank-bm25>=0.2.2,<0.3",
]

[project.scripts]
ai-knowledge-demo = "ai_knowledge_demo.cli:main"
ai-knowledge-ingest = "ai_knowledge_demo.ingest:main"
ai-knowledge-ask = "ai_knowledge_demo.ask:main"
ai-knowledge-evaluate = "ai_knowledge_demo.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]
